updated components file

--- a/backend/.choreo/components.yaml
+++ b/backend/.choreo/components.yaml
@@ -9,3 +9,7 @@ endpoints:
       networkVisibilities:
         - Project
         - Public
+dependencies:
+    connectionReferences:
+    - name: backend
+      resourceRef: service:/django-react-tut/backend/v1/be2b5/PUBLIC
